Finishing the weather page along with the markdown

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -132,3 +132,11 @@ a.desc:after {
 .cursor-pointer {
     cursor: pointer !important;
 }
+
+.bg-light-gray {
+    background-color: lightgray !important;
+}
+
+.carousel-control-prev, .carousel-control-next {
+    width: 5% !important;
+}
